k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service # 서비스 객체 이름
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress":true}' # 네트워크 엔드포인트 그룹(NEG) 사용
spec:
  type: LoadBalancer
  loadBalancerIP: 34.64.151.105  # 고정 IP 연결
  selector:
    app: frontend-service # 이 파드를 대상으로 수행
  ports:
    - protocol: TCP
      port: 443  # 클라이언트가 접근할 서비스 포트. 
      targetPort: 8501 # pod 내부에서 애플리케이션이 사용하는 포트 == 컨테이너의 포트와 동일해야함.
