k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # HTTPS 인증서 발급 시 사용
spec:
  tls:
  - hosts:
    - mail-cote.com
    secretName: frontend-service-tls-secret
  rules:
  - host: mail-cote.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 443
